<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/activity_horizontal_space_half">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_space_double"
                android:gravity="center"
                android:paddingHorizontal="@dimen/activity_horizontal_space_half"
                android:paddingVertical="@dimen/activity_horizontal_space"
                android:text="@string/limit_reached"
                android:textColor="@color/white"
                android:textSize="@dimen/large_text"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_marginEnd="@dimen/activity_horizontal_space_double"
                android:id="@+id/infinity_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_space_double"
                android:src="@drawable/ic_infinity"
                app:layout_constraintEnd_toStartOf="@+id/watch_iv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_tv" />

            <ImageView
                android:id="@+id/watch_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_space_double"
                android:src="@drawable/ic_watch_ad"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/infinity_iv"
                app:layout_constraintTop_toBottomOf="@+id/title_tv" />

            <TextView
                android:id="@+id/no_limit_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_space"
                android:text="@string/get_no_limits"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_text"
                app:layout_constraintEnd_toEndOf="@+id/infinity_iv"
                app:layout_constraintStart_toStartOf="@+id/infinity_iv"
                app:layout_constraintTop_toBottomOf="@+id/watch_iv" />

            <TextView
                android:id="@+id/watch_ad_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_space"
                android:text="@string/one_time_use"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_text"
                app:layout_constraintEnd_toEndOf="@+id/watch_iv"
                app:layout_constraintStart_toStartOf="@+id/watch_iv"
                app:layout_constraintTop_toBottomOf="@+id/watch_iv" />

            <Button
                android:id="@+id/subscribe_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_space_double"
                android:layout_marginBottom="@dimen/activity_horizontal_space_double"
                android:background="@drawable/bkg_subs_btn"
                android:foreground="?attr/selectableItemBackground"
                android:minWidth="130dp"
                android:textColor="@color/white"
                android:text="@string/subscribe"
                android:textAllCaps="false"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/no_limit_tv"
                app:layout_constraintStart_toStartOf="@+id/no_limit_tv"
                app:layout_constraintTop_toBottomOf="@id/no_limit_tv" />

            <Button
                android:id="@+id/watch_ad_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_space_double"
                android:layout_marginBottom="@dimen/activity_horizontal_space_double"
                android:background="@drawable/bkg_ad_btn"
                android:foreground="?attr/selectableItemBackground"
                android:minWidth="130dp"
                android:textColor="@color/white"
                android:text="@string/ad"
                android:textAllCaps="false"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/watch_ad_tv"
                app:layout_constraintStart_toStartOf="@+id/watch_ad_tv"
                app:layout_constraintTop_toBottomOf="@id/watch_ad_tv" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>