<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="coin"
            type="by.lebedev.nanopoolmonitoring.data.entities.cc.CcCoin" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="@dimen/internal_chain_space_double"
        android:layout_marginVertical="@dimen/internal_chain_space">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/orange">

            <TextView
                android:id="@+id/coin_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:minWidth="60dp"
                android:text="@string/coin_name"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/coin_price"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/coin_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:minWidth="100dp"
                android:text="@string/price_in_usd"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/coin_change"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/coin_name"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/coin_change"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:minWidth="60dp"
                android:text="@string/change_in_24h"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/coin_price"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</layout>